@@ -1,5 +1,8 @@
 Release Notes
 
+* 1/26/2016
+  * added PandaCache
+
 * 6/22/2015
   * added example for GET with getPresignedURL
 
